--- a/index.html
+++ b/index.html
@@ -1,97 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Wiley Is Infallible</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Reagan's Personal Site</title>
-</head>
-
-<body>
-  <table cellspacing=20>
-    <tr>
-      <td><img src="ROBrobot.png" alt="robot/human"></td>
-      <td>
-        <h1>Reagan Blank</h1>
-        <p><em>in transition</em> </p>
-        <p>Reagan has been a number of things - but none of any real signficance.
-          He is now at a point of personal transition. He collects vintage video
-          games, supports Liverpool FC, and hopes to one day become a robot.</p>
-      </td>
-    </tr>
-    </table>
-
-
-    <hr>
-    <h3><strong>Education</strong></h3>
-    <ul>
-      <li>various colleges</li>
-      <li>online courses</li>
-    </ul>
-
-<hr />
-    <h3>Work Experience</h3>
-    <table cellspacing=10>
-      <thread>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thread>
-      <tr>
-        <td>2000-2003</td>
-        <td>Store Manager at CD Warehouse</td>
-      </tr>
-      <tr>
-        <td>2004-2021</td>
-        <td>Theatre Manager at Landmark's Inwood Theatre</td>
-      </tr>
-      <tr>
-        <td>2021</td>
-        <td>Student at Zero House</td>
-      </tr>
-    </table>
-<hr />
-    <h3>Skills</h3>
-    <table cellspacing=10>
-      <tr>
-        <td>
-          <table>
-            <tr>
-              <td>Film Projection</td>
-              <td>✪✪✪✪✪</td>
-            </tr>
-          <tr>
-            <td>Guitar</td>
-            <td>✪✪✪</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table>
-          <tr>
-            <td>Electronics soldering</td>
-            <td>✪✪</td>
-          </tr>
-          <tr>
-            <td>iOS Development</td>
-            <td>✪ in training</td>
-          </tr>
-          <tr>
-            <td>Web Development</td>
-            <td>✪ in training</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-<hr />
-    <p>
-      <a href="hobbies.html">My Hobbies</a>
-    </p>
-
-</body>
-
-<p><a href="contact info.html">Contact me</a></p>
-
-
+  <body>
+    <h1>You love Wiley!</h1>
+    <p>You <em>need</em> Wiley.</p>
+    <p>Wiley, Wiley, Wiley!</p>
+    <p>Wiley, Wiley, Wiley!</p>
+    <p>Wiley, Wiley, Wiley!</p>
+    <img src="Wiley1.jpeg" alt="Overlord" width="200" height = "200">
+    <p>(pictured: Wiley)</p>
+  </body>
 </html>
